Update search to better align with REST API
REST API returns JSON Serialized List<SObject>, current RemoteTK
controller serializes List<List<SObject>>, which is the default return
of a SOSL query - this better aligns the RemoteTK implementation with
the ForceTK REST API implementation for better interoperability and
interchangability.

--- a/RemoteTKController.cls
+++ b/RemoteTKController.cls
@@ -280,9 +280,11 @@ public class RemoteTKController {
 
     @remoteAction
     public static String search(String sosl) {
-        List<List<SObject>> result;        
+        List<SObject> result = new List<SObject>();        
         try {
-            result = Search.query(sosl);
+            List<List<SObject>> searchResults = Search.query(sosl);
+            for(List<SObject> sr : searchResults)
+            	result.addAll(sr);
         } catch (QueryException qe) {
             return makeError(qe.getMessage(), 'INVALID_SEARCH');
         } catch (SearchException se) {
